Changed name at bottom of footer to "Paral Dynamic" Added margin to all pages for fixed navbar. Desktop navbar now scrolls down with user. Added some wrapping to navbar in HTML to position elements correctly.

--- a/styles/aboutus.css
+++ b/styles/aboutus.css
@@ -1,5 +1,5 @@
 #team_description {
-    margin-top: 50px;
+    margin-top: 8rem;
     gap: clamp(0rem, 3rem, 5rem);
     display: flex;
     justify-content: space-evenly;
